Added some functionality

--- a/CartKaro/CartKaro.csproj
+++ b/CartKaro/CartKaro.csproj
@@ -33,6 +33,9 @@
 	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net7.0-ios|AnyCPU'">
 	  <CreatePackage>false</CreatePackage>
 	</PropertyGroup>
+	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|net7.0-ios|AnyCPU'">
+	  <CreatePackage>false</CreatePackage>
+	</PropertyGroup>
 	<ItemGroup>
 		<!-- App Icon -->
 		<MauiIcon Include="Resources\AppIcon\appicon.svg" ForegroundFile="Resources\AppIcon\appiconfg.svg" Color="#512BD4" />
@@ -92,5 +95,11 @@
 	  <BundleResource Include="Resources\Images\setting.png" />
 	  <BundleResource Include="Resources\Images\settings.svg" />
 	  <BundleResource Include="Resources\Images\gear.png" />
+	</ItemGroup>
+	<ItemGroup Condition="'$(TargetFramework)' == 'net7.0-android'">
+	  <PackageReference Include="Plugin.Maui.RazorPaymentMin" Version="1.1.1" />
+	</ItemGroup>
+	<ItemGroup Condition="'$(TargetFramework)' == 'net7.0-ios'">
+	  <PackageReference Include="Plugin.Maui.RazorPaymentMin" Version="1.1.1" />
 	</ItemGroup>
 </Project>
